--- a/public/view/landingPage.html
+++ b/public/view/landingPage.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PUC Bet</title>
-    <link rel="icon" type="../assets/favicon.png" href="path-to-favicon" sizes="32x32">
+    <link rel="icon" href="../assets/favicon.png" sizes="32x32">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 
