--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -6,6 +6,7 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/bootstrap.css">
+    <link rel="icon" href="../assets/favicon.png" sizes="32x32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   </head>
   <body>
