--- a/public/view/home.html
+++ b/public/view/home.html
@@ -36,13 +36,21 @@
                     <i class="fa fa-home"></i>
                     Home
                 </a>
-                <a href="#" class="app-sidebar-link" id="only-moderator" style="display: none;">
+                <a href="../view/evaluateNewEvent.html" class="app-sidebar-link only-moderator" style="display: none;">
                     <i class="fa fa-chart-bar"></i>
                     Evaluate Event
                 </a>
                 <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-chart-bar"></i>
+                    Finish Event
+                </a>
+                <a href="#" class="app-sidebar-link">
                     <i class="fa fa-cogs"></i>
-                    Settings
+                    My Events
+                </a>
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-cogs"></i>
+                    My Wallet
                 </a>
                 <a href="#" class="app-sidebar-link">
                     <i class="fa fa-sign-out-alt"></i>
@@ -106,11 +114,13 @@
                     credentials: 'include'
                 })
                 if(res.ok){
-                    const elements = document.getElementById('only-moderator');
-                    elements.style.display = 'block';
+                    const elements = document.querySelectorAll('.only-moderator');
+                    elements.forEach(element => {
+                        element.style.display = 'block';
+                    });
                 }
             }catch(error){
-                alert("Não foi possível carregar dados");
+                alert("Não foi possível carregar dados, tente novamente mais tarde!");
                 window.location.href = "../view/login.html";
             }
         }
@@ -178,6 +188,7 @@
           while(ulPaginator.firstChild) 
             ulPaginator.removeChild(ulPaginator.firstChild);
         }
+
         function refreshPaginator() {
             resetUlPageNumbers();
 
@@ -303,15 +314,15 @@
 
             if (res.ok) {
                 let data = await res.json();
-                let balance = data.balance;  // Assumindo que a resposta do backend seja um objeto com o campo "balance"
-                
+                let balance = data.balance;
                 // Se necessário, formate o saldo com 2 casas decimais
                 balance = parseFloat(balance).toFixed(2);
-
+                
                 // Exibe o saldo na página
                 document.getElementById('balance').textContent = `${balance}`;
             } else {
-                alert('Não foi possível acessar os dados');
+                alert('Não foi possível acessar os dados da sua carteira');
+               
             }
         }
         
@@ -323,18 +334,12 @@
                 row.classList.add('active-row');
             }
         });
-        document.querySelector('.search-input').addEventListener('focus', function() {
-            this.style.boxShadow = '0 0 5px rgba(0, 123, 255, 0.5)';
-        });
 
-        document.querySelector('.search-input').addEventListener('blur', function() {
-            this.style.boxShadow = 'none';
-        });
 
         document.addEventListener('readystatechange', async event => {
             if(event.target.readyState === 'complete'){
                 await checkIsModerator();
-                setBalance();
+                await setBalance();
                 setDate();
 
                 requestNumberOfEvent();
