--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -577,6 +577,18 @@ input[type="radio"]{
     font-size: 14px;
     transition: border-color 0.3s ease;
 }
+
+/*Formatação para tempo(horas)*/
+.date-field input[type="time"] {
+    width: 100%; /* Campo ocupa todo o espaço disponível */
+    padding: 10px;
+    border: 1px solid var(--input-border);
+    border-radius: 6px;
+    background-color: var(--input-background);
+    color: var(--text-color);
+    font-size: 14px;
+    transition: border-color 0.3s ease;
+}
 .radio-group {
     display: flex;
     gap: 15px; /* Espaço entre os botões */
@@ -617,3 +629,19 @@ input[type="radio"]{
 }
 
 
+/*BOTÃO CREATE EVENT (ADD NEW EVENT)*/
+.btn-primary{
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;  /* Espaçamento */
+    font-size: 18px;
+    cursor: pointer;  /* Cursor pointer */
+    border-radius: 5px;  /* Bordas arredondadas */
+    display: flex;
+    align-items: center;
+  }
+
+.btn-primary:hover{
+    background-color: var(--background-light);
+  }
