--- a/public/view/home-user.html
+++ b/public/view/home-user.html
@@ -3,42 +3,236 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home do usuário</title>
-    <script src="https://kit.fontawesome.com/3f09446719.js" crossorigin="anonymous"></script>
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-        crossorigin="anonymous">
+    <title>My Wallet</title>
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="icon" href="../assets/favicon.png" sizes="32x32">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
-    <div class="container mt-4" style="padding: 20px;">
-        <h1 class="mb-3"><b>Minha Carteira</b></h1>
+    <div class="app-container">
+        <header class="app-header">
+            <div class="app-header-left">
+                <span class="app-icon"><img src="../assets/pucbet-logo.png" class="logoPucBet"></span>
+            </div>
+            <div class="app-header-center">
+                <input type="text" class="search-input" id="searchBar" placeholder="Pesquisar eventos...">
+                <button class="search-btn"><i class="fa fa-search"></i></button>
+            </div>
+            <div class="app-header-right">
+                <div id="balance-container" class="mt-3 d-none">
+                    <h3>
+                        <button type="button" class="fas fa-eye" id="showHideBalance"></button>
+                        Your Balance: $ <span id="balance"></span>
+                    </h3>
+                </div>
+            </div>
+        </header>
+
+        <div class="app-content">
+            <nav class="app-sidebar">
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-home"></i>
+                    Home
+                </a>
+                <a href="../view/evaluateNewEvent.html" class="app-sidebar-link only-moderator" style="display: none;">
+                    <i class="fa fa-chart-bar"></i>
+                    Evaluate Event
+                </a>
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-calendar-days"></i>
+                    My Events
+                </a>
+                <a href="#" class="app-sidebar-link active">
+                    <i class="fa fa-wallet"></i>
+                    My Wallet
+                </a>
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-chart-bar"></i>
+                    Finish Event
+                </a>
+                <a href="#" class="app-sidebar-link">
+                    <i class="fa fa-sign-out-alt"></i>
+                    Logout
+                </a>
+            </nav>
+
+            <main class="projects-section">
+                <header class="projects-section-header" style="display: flex; align-items: center; justify-content: space-between;">
+                    <p class="section-title">Recent Transactions</p>
+                    <p class="time" id="currentDate"></p>
+                    <div>
+                        <button onclick="showModal('modalAddFunds')">Add Funds</button>
+                        <button onclick="showModal('modalWithdrawFunds')">Withdrawn Funds</button>
+                    </div>
+                    
+                </header>
+                
+                <div class="row align-items-center">
+                    <div class="col">
+                        <table id="tabelaTransactions" class="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>ID</th>
+                                    <th>Type</th>
+                                    <th class="text-end">Value ($)</th>
+                                    <th>Date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Transações dinâmicas -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <nav aria-label="Page navigation">
+                            <ul id="pagination" class="pagination pagination-sm">
+                                <!-- Elementos de paginação -->
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </main>
+        </div>
     </div>
-    <div class="container" style="padding: 20px;">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>#ID</th>
-                    <th>Tipo</th>
-                    <th class="text-end">Valor (R$)</th>
-                    <th>Data</th>
-                </tr>
-            </thead>
-            <tbody id="tabelaTransactions">
-                <!-- as transações serão inseridas aqui -->
-            </tbody>
-        </table>
-    
-        <!-- Controles de Paginação -->
-        <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-end" id="pagination">
-            <!-- Itens de paginação serão gerados dinamicamente -->
-          </ul>
-        </nav>
+
+    <!-- Modal Add Funds -->
+    <div class="modal" id="modalAddFunds" style="display: none;">
+        <form class="modal-content">
+            <div class="container">
+                <div class="modal-header">
+                    <h1>Add Funds</h1>
+                </div>
+
+                <label for="fName">Name: </label>
+                <input type="text" id="fName" placeholder="Enter your name">
+
+                <label for="fCardNumber">Card Number:</label>
+                <input type="text" id="fCardNumber" placeholder="Enter card number">
+
+                <label for="fCVC">CVC:</label>
+                <input type="text" id="fCVC" placeholder="Enter CVC">
+
+                <label for="fExpirationDate">Expiration Date:</label>
+                <input type="text" id="fExpirationDate" placeholder="Enter expiration date">
+
+                <label for="fAmountAdd">Amount ($):</label>
+                <input type="number" id="fAmountAdd" placeholder="Enter amount to add" min="0" step="0.01">
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" onclick="hideModal('modalAddFunds')" class="cancelBtn">Cancel</button>
+                <button type="button" onclick="confirmAddFunds()" class="evaluateBtn">Add</button>
+            </div>
+        </form>
+    </div>
+
+     <!-- Modal Withdraw Funds -->
+    <div class="modal" id="modalWithdrawFunds" style="display: none;">
+        <form class="modal-content">
+            <div class="container">
+                <div class="modal-header">
+                    <h1>Withdraw Funds</h1>
+                </div>
+
+                <div class="funds-form">
+                    <label for="fWithdrawMethod">Choose a Withdrawal Method:</label>
+                    <select id="fWithdrawMethod" onchange="togglePaymentFields('withdraw')">
+                        <option value="" hidden>Select a method...</option>
+                        <option value="bank">Bank - Ag. / Account Number</option>
+                        <option value="pix">PIX Key</option>
+                    </select>
+
+                    <div id="bankFieldsWithdraw" style="display: none;">
+                        <label for="fBankAgency">Bank Agency:</label>
+                        <input type="text" id="fBankAgencyWithdraw" placeholder="Enter bank agency">
+
+                        <label for="fBankAccount">Account Number:</label>
+                        <input type="text" id="fBankAccountWithdraw" placeholder="Enter account number">
+                    </div>
+                    <div id="pixFieldsWithdraw" style="display: none;">
+                        <label for="fPixKeyWithdraw">PIX Key:</label>
+                        <input type="text" id="fPixKeyWithdraw" placeholder="Enter PIX key">
+                    </div>
+
+                    <label for="fWithdrawAmount">Amount ($):</label>
+                    <input type="number" id="fWithdrawAmount" placeholder="Enter amount to withdraw" min="0" step="0.01">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" onclick="hideModal('modalWithdrawFunds')" class="cancelBtn">Cancel</button>
+                    <button type="button" onclick="confirmWithdrawFunds()" class="evaluateBtn">Withdraw</button>
+                </div>
+            </div>
+        </form>
     </div>
 
     <script>
+        
+        function togglePaymentFields(type) {
+            if (type === 'add') {
+                const paymentMethod = document.getElementById('fPaymentMethod').value;
+                document.getElementById('bankFieldsAdd').style.display = paymentMethod === 'bank' ? 'block' : 'none';
+                document.getElementById('pixFieldsAdd').style.display = paymentMethod === 'pix' ? 'block' : 'none';
+            } else if (type === 'withdraw') {
+                const withdrawMethod = document.getElementById('fWithdrawMethod').value;
+                document.getElementById('bankFieldsWithdraw').style.display = withdrawMethod === 'bank' ? 'block' : 'none';
+                document.getElementById('pixFieldsWithdraw').style.display = withdrawMethod === 'pix' ? 'block' : 'none';
+            }
+        }
+
+        function confirmAddFunds() {
+            const name = document.getElementById('fName').value;
+            const cardnumber = document.getElementById('fCardNumber').value;
+            const cvc = document.getElementById('fCVC').value;
+            const expirationDate = document.getElementById('fExpirationDate').value;
+            const amount = document.getElementById('fAmountAdd').value;
+        
+            // Verifica se todos os campos foram preenchidos
+            if (!name || !cardnumber || !cvc || !expirationDate || !amount) {
+                alert('Por favor, preencha todos os campos para prosseguir.');
+                return;
+            }
+            alert(`Fundos adicionados! Quantidade: $${amount} via cartão.`);
+            hideModal('modalAddFunds');
+        }
+        
+        function confirmWithdrawFunds() {
+            const amount = document.getElementById('fWithdrawAmount').value;
+            const withdrawMethod = document.getElementById('fWithdrawMethod').value;
+            const bankAgency = document.getElementById('fBankAgencyWithdraw').value;
+            const bankAccount = document.getElementById('fBankAccountWithdraw').value;
+            const pixKey = document.getElementById('fPixKeyWithdraw').value;
+        
+            if (!amount || !withdrawMethod) {
+                alert('Por favor, preencha todos os campos para prosseguir.');
+                return;
+            }
+        
+            if (withdrawMethod === 'bank' && (!bankAgency || !bankAccount)) {
+                alert('Por favor, forneça a agência bancária e o número da conta..');
+                return;
+            }
+        
+            if (withdrawMethod === 'pix' && !pixKey) {
+                alert('Por favor, coloque a chave PIX.');
+                return;
+            }
+        
+            alert(`Retirada dos Valores feita com Sucesso! Quantidade: $${amount} via ${withdrawMethod}.`);
+            hideModal('modalWithdrawFunds');
+        }
+
+        function showModal(modalId) {
+            document.getElementById(modalId).style.display = 'block';
+        }
+        
+        function hideModal(modalId) {
+            document.getElementById(modalId).style.display = 'none';
+        }
+        
         const transacoesPorPagina = 5;
         let paginaAtual = 1;
         let transacoes = [];
